--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <link rel="stylesheet" href="./styles/light.css" />
     <meta name="color-scheme" content="light dark" />
     <script src="./scripts/script.js"></script>
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
   </head>
   <body class="page">
     <header class="header decorated-zone">
       <span class="rec" aria-hidden="true">rec</span>
-      <span class="lamp" aria-hidden="true"></span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -57,45 +59,49 @@
     </header>
 
     <main class="main">
-      <section class="why">
+      <section class="main__section-type_one">
         <h2 class="main__title bold_text">Почему сосредоточиться так сложно</h2>
-        <div class="why-text">
-          <h3 class="main__subtitle bold_text title-decor">Многозадачность</h3>
-          <p class="main__text">
-            Особенно сложно сосредоточиться, когда задач много и все они —
-            важные. Где же легендарная многозадачность, когда она так нужна вам
-            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-            просто не существует. Исследователи
-            <a
-              class="main__link"
-              href="https://dana.org/article/multicosts-of-multitasking/"
-              target="_blank"
-              >выяснили</a
-            >, что мозгу тяжело концентрироваться даже на двух делах
-            одновременно. А когда в поле внимания попадает несколько важных
-            задач, организм паникует и выделяет кортизол и адреналин — «гормоны
-            стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
-            устаём.
-          </p>
-          <h3 class="main__subtitle bold_text title-decor">Дофамин</h3>
-          <p class="main__text">
-            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
-            невозможности сосредоточиться замешана и полная противоположность
-            стрессу — дофамин. Это вещество участвует в системе вознаграждения
-            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
-            что-то более «приятное» для мозгов. Например, смотрим лайки в
-            соцсетях. В это время и выделяется дофамин — и мы чувствуем
-            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
-            тем больше удовольствия получаешь.
-          </p>
+        <div class="main__text-block-type-one">
+          <article class="main__article-type-one">
+            <h3 class="main__subtitle bold_text title-decor">Многозадачность</h3>
+            <p class="main__text">
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна вам
+              (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+              просто не существует. Исследователи
+              <a
+                class="main__link"
+                href="https://dana.org/article/multicosts-of-multitasking/"
+                target="_blank"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин — «гормоны
+              стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
+              устаём.
+            </p>
+          </article>
+          <article class="main__article-type-one">
+            <h3 class="main__subtitle bold_text title-decor">Дофамин</h3>
+            <p class="main__text">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+              невозможности сосредоточиться замешана и полная противоположность
+              стрессу — дофамин. Это вещество участвует в системе вознаграждения
+              мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
+              что-то более «приятное» для мозгов. Например, смотрим лайки в
+              соцсетях. В это время и выделяется дофамин — и мы чувствуем
+              удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
+              тем больше удовольствия получаешь.
+            </p>
+          </article>
         </div>
       </section>
-      <section class="what">
+      <section class="main__section-type_two">
         <h2 class="main__title bold_text">
           Что снижает концентрацию внимания?
         </h2>
-        <div class="what-text">
-          <div class="what-block">
+        <div class="main__text-block-type-two">
+          <article class="main__article-type-two">
             <h3 class="main__subtitle bold_text title-decor">
               Многозадачность
             </h3>
@@ -107,8 +113,8 @@
               собранными всё время — невозможно. Концентрация — мышца, и она
               может не выдержать, если не давать ей отдохнуть.
             </p>
-          </div>
-          <div class="what-block">
+          </article>
+          <article class="main__article-type-two">
             <h3 class="main__subtitle bold_text title-decor">Еда</h3>
             <p class="main__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -118,8 +124,8 @@
               углеводов» заканчивается, мы чувствуем усталость и сонливость. И
               хотим ещё больше быстрых углеводов.
             </p>
-          </div>
-          <div class="what-block">
+          </article>
+          <article class="main__article-type-two">
             <h3 class="main__subtitle bold_text title-decor">Гаджеты</h3>
             <p class="main__text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -130,66 +136,76 @@
               Вот и получается, что чем больше времени мы проводим в гаджетах,
               тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
-          </div>
+          </article>
         </div>
       </section>
-      <section class="how">
+      <section class="main__section-type_one">
         <h2 class="main__title bold_text">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <div class="how-text">
-          <h3 class="main__subtitle bold_text title-decor">
+        <div class="main__text-block-type-one">
+          <h3 class="main__subtitle main__subtitle-different-margin bold_text title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
-          <h4 class="main__subsubtitle title-decor">
-            Представьте небо и облака
-          </h4>
-          <p class="main__text">
-            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-            успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
-            раз и мешают эти сложные задачи делать. В такие моменты можно
-            закрыть глаза и представить, что чистое небо — это вы, а облака —
-            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
-            где-то там, за тучами, и никуда не денется. Это упражнение поможет
-            вернуться в настоящий момент, а не волноваться о потенциальных
-            проблемах из будущего.
-          </p>
-          <h4 class="main__subsubtitle title-decor">Включите музыку</h4>
-          <p class="main__text">
-            Но не любую, и не любимую. Любимая может быть связана с сильными
-            положительными эмоциями, которые тоже очень сильно отвлекают.
-            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
-            попробовать включить плейлист c «белым шумом» или нейромузыкой.
-          </p>
-          <h4 class="main__subsubtitle title-decor">Прогуляейтесь</h4>
-          <p class="main__text">
-            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-            <a
-              class="main__link"
-              href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-              target="_blank"
-              >показал</a
-            >, что созерцание природы повышает концентрацию, в то время как
-            после просмотра городских пейзажей она наоборот понижается. Можно
-            совместить прогулку с физическими упражнениями или бегом — так в
-            мозг поступит ещё больше кислорода и он будет лучше работать. Но и
-            простая двадцатиминутная прогулка — тоже отличный вариант.
-          </p>
-          <h4 class="main__subsubtitle title-decor">Хорошо ешьте</h4>
-          <p class="main__text">
-            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
-            которые препятствуют резким скачкам сахара в крови. Например, с
-            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
-            фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-          </p>
-          <h4 class="main__subsubtitle title-decor">Читайте</h4>
-          <p class="main__text">
-            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
-            прочитать пост в соцсети, достаточно нескольких минут или даже
-            секунд. А вот интересная книга способна затянуть и на несколько
-            часов и круто тренирует направленное внимание.
-          </p>
+          <article class="main__article-type-one">
+            <h4 class="main__subsubtitle title-decor">
+              Представьте небо и облака
+            </h4>
+            <p class="main__text">
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
+              раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.
+            </p>
+          </article>
+          <article class="main__article-type-one">
+            <h4 class="main__subsubtitle title-decor">Включите музыку</h4>
+            <p class="main__text">
+              Но не любую, и не любимую. Любимая может быть связана с сильными
+              положительными эмоциями, которые тоже очень сильно отвлекают.
+              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+              попробовать включить плейлист c «белым шумом» или нейромузыкой.
+            </p>
+          </article>
+          <article class="main__article-type-one">
+            <h4 class="main__subsubtitle title-decor">Прогуляейтесь</h4>
+            <p class="main__text">
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+              <a
+                class="main__link"
+                href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                target="_blank"
+                >показал</a
+              >, что созерцание природы повышает концентрацию, в то время как
+              после просмотра городских пейзажей она наоборот понижается. Можно
+              совместить прогулку с физическими упражнениями или бегом — так в
+              мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+              простая двадцатиминутная прогулка — тоже отличный вариант.
+            </p>
+          </article>
+          <article class="main__article-type-one">
+            <h4 class="main__subsubtitle title-decor">Хорошо ешьте</h4>
+            <p class="main__text">
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+              которые препятствуют резким скачкам сахара в крови. Например, с
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
+              фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            </p>
+          </article>
+          <article class="main__article-type-one">
+            <h4 class="main__subsubtitle title-decor">Читайте</h4>
+            <p class="main__text">
+              Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
+              прочитать пост в соцсети, достаточно нескольких минут или даже
+              секунд. А вот интересная книга способна затянуть и на несколько
+              часов и круто тренирует направленное внимание.
+            </p>
+          </article>
         </div>
       </section>
       <section class="gallery">
