--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
       <h1 class="header__title bold_text">no focus</h1>
       <div class="header__text-box title-decor">
         <p class="header__text bold_text">
-          Что делать, когда не можешь делать ничего
-        </p>
-        <p class="header__text bold_text">
+          Что делать, когда не можешь делать ничего <br />
           Или почему нам так сложно сконцентрироваться, особенно когда очень
           надо
         </p>
@@ -59,10 +57,10 @@
     </header>
 
     <main class="main">
-      <section class="main__section-type_one">
+      <section class="main__section">
         <h2 class="main__title bold_text">Почему сосредоточиться так сложно</h2>
-        <div class="main__text-block-type-one">
-          <article class="main__article-type-one">
+        <div class="main__text-block">
+          <article class="main__article">
             <h3 class="main__subtitle bold_text title-decor">Многозадачность</h3>
             <p class="main__text">
               Особенно сложно сосредоточиться, когда задач много и все они —
@@ -81,7 +79,7 @@
               устаём.
             </p>
           </article>
-          <article class="main__article-type-one">
+          <article class="main__article">
             <h3 class="main__subtitle bold_text title-decor">Дофамин</h3>
             <p class="main__text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
@@ -96,12 +94,12 @@
           </article>
         </div>
       </section>
-      <section class="main__section-type_two">
+      <section class="main__section main__section-column">
         <h2 class="main__title bold_text">
           Что снижает концентрацию внимания?
         </h2>
-        <div class="main__text-block-type-two">
-          <article class="main__article-type-two">
+        <div class="main__text-block main__text-block-column">
+          <article class="main__article">
             <h3 class="main__subtitle bold_text title-decor">
               Многозадачность
             </h3>
@@ -114,7 +112,7 @@
               может не выдержать, если не давать ей отдохнуть.
             </p>
           </article>
-          <article class="main__article-type-two">
+          <article class="main__article">
             <h3 class="main__subtitle bold_text title-decor">Еда</h3>
             <p class="main__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -125,7 +123,7 @@
               хотим ещё больше быстрых углеводов.
             </p>
           </article>
-          <article class="main__article-type-two">
+          <article class="main__article">
             <h3 class="main__subtitle bold_text title-decor">Гаджеты</h3>
             <p class="main__text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -139,16 +137,16 @@
           </article>
         </div>
       </section>
-      <section class="main__section-type_one">
+      <section class="main__section">
         <h2 class="main__title bold_text">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <div class="main__text-block-type-one">
+        <div class="main__text-block">
           <h3 class="main__subtitle main__subtitle-different-margin bold_text title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
-          <article class="main__article-type-one">
+          <article class="main__article">
             <h4 class="main__subsubtitle title-decor">
               Представьте небо и облака
             </h4>
@@ -163,7 +161,7 @@
               проблемах из будущего.
             </p>
           </article>
-          <article class="main__article-type-one">
+          <article class="main__article">
             <h4 class="main__subsubtitle title-decor">Включите музыку</h4>
             <p class="main__text">
               Но не любую, и не любимую. Любимая может быть связана с сильными
@@ -172,7 +170,7 @@
               попробовать включить плейлист c «белым шумом» или нейромузыкой.
             </p>
           </article>
-          <article class="main__article-type-one">
+          <article class="main__article">
             <h4 class="main__subsubtitle title-decor">Прогуляейтесь</h4>
             <p class="main__text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
@@ -188,7 +186,7 @@
               простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
           </article>
-          <article class="main__article-type-one">
+          <article class="main__article">
             <h4 class="main__subsubtitle title-decor">Хорошо ешьте</h4>
             <p class="main__text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
@@ -197,7 +195,7 @@
               фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
           </article>
-          <article class="main__article-type-one">
+          <article class="main__article">
             <h4 class="main__subsubtitle title-decor">Читайте</h4>
             <p class="main__text">
               Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
