после вторых правок

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="./styles/light.css" />
     <meta name="color-scheme" content="light dark" />
     <script src="./scripts/script.js"></script>
-    <link rel="icon" href="./images/favicon.ico" sizes="any">
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -61,12 +61,14 @@
         <h2 class="main__title bold_text">Почему сосредоточиться так сложно</h2>
         <div class="main__text-block">
           <article class="main__article">
-            <h3 class="main__subtitle bold_text title-decor">Многозадачность</h3>
+            <h3 class="main__subtitle bold_text title-decor">
+              Многозадачность
+            </h3>
             <p class="main__text">
               Особенно сложно сосредоточиться, когда задач много и все они —
-              важные. Где же легендарная многозадачность, когда она так нужна вам
-              (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-              просто не существует. Исследователи
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи
               <a
                 class="main__link"
                 href="https://dana.org/article/multicosts-of-multitasking/"
@@ -74,22 +76,22 @@
                 >выяснили</a
               >, что мозгу тяжело концентрироваться даже на двух делах
               одновременно. А когда в поле внимания попадает несколько важных
-              задач, организм паникует и выделяет кортизол и адреналин — «гормоны
-              стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
-              устаём.
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
             </p>
           </article>
           <article class="main__article">
             <h3 class="main__subtitle bold_text title-decor">Дофамин</h3>
             <p class="main__text">
-              С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
-              невозможности сосредоточиться замешана и полная противоположность
-              стрессу — дофамин. Это вещество участвует в системе вознаграждения
-              мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
-              что-то более «приятное» для мозгов. Например, смотрим лайки в
-              соцсетях. В это время и выделяется дофамин — и мы чувствуем
-              удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
-              тем больше удовольствия получаешь.
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
             </p>
           </article>
         </div>
@@ -143,7 +145,9 @@
           секунд)
         </h2>
         <div class="main__text-block">
-          <h3 class="main__subtitle main__subtitle-different-margin bold_text title-decor">
+          <h3
+            class="main__subtitle main__subtitle-different-margin bold_text title-decor"
+          >
             5 простых (на самом деле не очень) советов
           </h3>
           <article class="main__article">
@@ -152,8 +156,8 @@
             </h4>
             <p class="main__text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-              успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
-              раз и мешают эти сложные задачи делать. В такие моменты можно
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
               закрыть глаза и представить, что чистое небо — это вы, а облака —
               тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
               где-то там, за тучами, и никуда не денется. Это упражнение поможет
@@ -191,17 +195,17 @@
             <p class="main__text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
-              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
-              фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
           </article>
           <article class="main__article">
             <h4 class="main__subsubtitle title-decor">Читайте</h4>
             <p class="main__text">
-              Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
-              прочитать пост в соцсети, достаточно нескольких минут или даже
-              секунд. А вот интересная книга способна затянуть и на несколько
-              часов и круто тренирует направленное внимание.
+              Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.
             </p>
           </article>
         </div>
