the fourth attempt

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
           </article>
         </div>
       </section>
-      <section class="main__section main__section-column">
+      <section class="main__section main__section-what">
         <h2 class="main__title bold_text">
           Что снижает концентрацию внимания?
         </h2>
-        <div class="main__text-block main__text-block-column">
+        <div class="main__text-block main__text-block-what">
           <article class="main__article">
             <h3 class="main__subtitle bold_text title-decor">
               Многозадачность
